etc/Makefile: Hook goodgen

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -6,7 +6,14 @@ CCFLAGS=-Wall -W -Wformat-nonliteral -Wcast-align -Wpointer-arith 		\
 	-Wmissing-declarations -Winline -Wundef -Wnested-externs -Wcast-qual 	\
 	-Wshadow -Wwrite-strings -Wno-unused-parameter 				\
 	-Wswitch -Wbad-function-cast -g
-LIB=-lm
+INCLUDE=-I/usr/include/gmp -I/usr/include/mpfr
+LIB=-lm -lmpfr
+
+goodgen: goodgen.c ../subr_random.c
+	$(CC99) $(CCFLAGS) $(INCLUDE)				\
+		goodgen.c ../subr_random.c			\
+	-o goodgen						\
+	$(LIB)
 
 testrand: testrand.c ../subr_random.c
 	$(CC99) $(CCFLAGS) $(INCLUDE)				\
