--- a/ulps/Makefile
+++ b/ulps/Makefile
@@ -4,7 +4,7 @@ CCFLAGS=-Wall -W -Wformat-nonliteral -Wcast-align -Wpointer-arith \
 	-Wmissing-declarations -Winline -Wundef -Wnested-externs -Wcast-qual \
 	-Wshadow -Wwrite-strings -Wno-unused-parameter \
 	-Wswitch -Wbad-function-cast -g
-INCLUDE=-I/usr/include/gmp -I/usr/include/mpfr
+INCLUDE=-I../include -I/usr/include/gmp -I/usr/include/mpfr
 LIB=-lm -lmpfr
 
 SOURCES=main.c gen.c ../subr_random.c
