--- a/ulps/configure.ac
+++ b/ulps/configure.ac
@@ -6,6 +6,8 @@ AC_INIT([ulp], [0.1], [ekamperi@gmail.com])
 AC_CONFIG_SRCDIR([gen.c])
 AC_CONFIG_HEADERS([config.h])
 
+AM_INIT_AUTOMAKE([ulp], [0.0.1])
+
 # Checks for programs.
 AC_PROG_CC
 
