ulp: Get rid of automake

--- a/ulps/configure.ac
+++ b/ulps/configure.ac
@@ -5,8 +5,6 @@ AC_INIT([ulp], [0.1], [ekamperi@gmail.com])
 AC_CONFIG_SRCDIR([gen.c])
 AC_CONFIG_HEADERS([config.h])
 
-AM_INIT_AUTOMAKE([ulp], [0.0.1])
-
 # Checks for programs.
 AC_PROG_CC
 
@@ -65,5 +63,5 @@ AC_ARG_WITH([mpfr-lib-path],
   [MPFR_LIBS='-lmpfr'])
 AC_SUBST([MPFR_LIBS])
 
-AC_CONFIG_FILES([Makefile])
+#AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
