--- a/ulps/Makefile
+++ b/ulps/Makefile
@@ -8,15 +8,21 @@ CCFLAGS=-Wall -W -Wformat-nonliteral -Wcast-align -Wpointer-arith \
 INCLUDE=-I../include -I/usr/include/gmp -I/usr/include/mpfr -I/usr/pkg/include
 LIBS=-lm -lmpfr -L/usr/local/lib -L/usr/pkg/lib
 
-VPATH = ../
-SOURCES=main.c gen.c ulp.c subr_random.c
+# For ../subr_*.c
+VPATH=../
 
-all: $(SOURCES)
+obj/%.o: %.c
+	$(CC99) -c -o $@ $< $(CCFLAGS) $(INCLUDE)
+
+_DEPS = main.o gen.o ulp.o subr_random.o
+ DEPS = $(_DEPS:%=obj/%)
+ulpcalc: $(DEPS)
 	@test -f config.h || \
 		(echo "You need to run autoreconf && ./configure first"; exit 1)
-	$(CC99) $(SOURCES) -o ulps $(CCFLAGS) $(INCLUDE) $(LIBS)
+	$(CC99) -o ulps $(DEPS) $(CCFLAGS) $(INCLUDE) $(LIBS)
 
 # Hacky; create tar to ../ or else it will be included in the final tar
+.PHONY: dist
 dist:
 	autoreconf && ./configure >/dev/null
 	cp ../subr_random.c .
@@ -24,5 +30,10 @@ dist:
 	tar czfv ../ulp-0.1.tar.gz .
 	mv ../ulp-0.1.tar.gz .
 
+.PHONY: clean
+clean:
+	rm -f obj/*.o *~ core
+
+.PHONY: git-clean
 git-clean:
-	git clean -f -d
+	git clean -fd > /dev/null
