etc/Makefile: Add gen-csv, gen-graphs targets.WIP.

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -33,6 +33,14 @@ testrand: testrand.c ../subr_random.c
 	-o testrand						\
 	$(LIB)
 
+gen-csv:
+	@./profmath
+
+gen-graphs: gen-csv
+	@mkdir -p graphs
+	@rm -f graphs/*
+	@./csv2plot.sh 2>/dev/null
+
 clean:
 	rm -f obj/*.o *~ core *.csv
 
