fenv/t_ieeefp.h: Cleanup

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 AC_PREREQ([2.59])
 AC_INIT([mathlib], [0.1], [ekamperi@gmail.com])
 AC_CONFIG_SRCDIR([t_atan.c])
-AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_HEADERS([include/config.h])
 
 # Checks for programs.
 AC_PROG_CC
@@ -14,6 +14,11 @@ AC_CHECK_LIB([m], [cos])
 # Checks for header files.
 AC_CHECK_HEADERS([fenv.h float.h inttypes.h limits.h math.h stdlib.h string.h])
 AC_CHECK_HEADERS([tgmath.h])
+
+# This is a non-standard interface. It is only consumed by fenv/t_ieeefp.c,
+# to check whether the concurrent inclusion of fenv.h and ieeefp.h causes
+# any symbols' collisions.
+AC_CHECK_HEADERS([ieeefp.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
