Initial import of t_cacosh. WIP.

--- a/complex/Makefile
+++ b/complex/Makefile
@@ -15,7 +15,7 @@ obj/%.o: %.c
 	mkdir -p obj
 	$(CC99) -c -o $@ $< $(CFLAGS)
 
-TESTS=	t_cacos t_imgconstant
+TESTS=	t_cacos t_cacosh t_imgconstant
 
 .PHONY: all
 all: $(TESTS)
@@ -24,6 +24,12 @@ _DEPS_T_CACOS = t_cacos.o subr_atf.o subr_fpcmp.o subr_random.o
  DEPS_T_CACOS = $(_DEPS_T_CACOS:%=obj/%)
 t_cacos: $(DEPS_T_CACOS)
 	$(CC99) -o t_cacos $(DEPS_T_CACOS) $(CFLAGS) $(LIBS)
+
+
+_DEPS_T_CACOSH = t_cacosh.o subr_atf.o subr_fpcmp.o subr_random.o
+ DEPS_T_CACOSH = $(_DEPS_T_CACOSH:%=obj/%)
+t_cacosh: $(DEPS_T_CACOSH)
+	$(CC99) -o t_cacosh $(DEPS_T_CACOSH) $(CFLAGS) $(LIBS)
 
 _DEPS_T_IMGCONSTANT = t_imgconstant.o subr_fpcmp.o
  DEPS_T_IMGCONSTANT = $(_DEPS_T_IMGCONSTANT:%=obj/%)
