--- a/ulps/configure.ac
+++ b/ulps/configure.ac
@@ -27,8 +27,14 @@ AC_CHECK_HEADERS([float.h stdlib.h string.h])
 AC_TYPE_SIZE_T
 
 # Checks for library functions.
-AC_CHECK_FUNCS([acos acosh asin asinh atan atanh cbrt ceil cosh erf erfc floor hypot])
-AC_CHECK_FUNCS([sin cos exp expm1 exp2 fabs log log1p log10 log2 rint sinh])
-AC_CHECK_FUNCS([sqrt pow remainder tan tanh tgamma y0 y1 yn])
+AC_CHECK_FUNCS([acos acosh asin asinh atan atanh atan2 cbrt ceil cos cosh erf])
+AC_CHECK_FUNCS([erfc exp expm1 exp2 fabs floor fmod hypot lgamma log log1p])
+AC_CHECK_FUNCS([log10 log2 pow remainder rint sin sinh sqrt tan tanh tgamma])
+AC_CHECK_FUNCS([trunc y0 y1 yn])
+
+AC_CHECK_FUNCS([acosl acoshl asinl asinhl atanl atanhl atan2l cbrtl ceill cosl])
+AC_CHECK_FUNCS([cosl coshl erfl erfcl expl exp2l expm1l fabsl floorl fmodl])
+AC_CHECK_FUNCS([hypotl lgammal log10l log1pl log2l logbl logl])
+AC_CHECK_FUNCS([powl remainderl rintl sinhl sinl sqrtl tanhl tanl tgammal truncl])
 
 AC_OUTPUT
