--- a/ulps/Makefile
+++ b/ulps/Makefile
@@ -1,15 +1,15 @@
 CC99=gcc -std=c99
-# -Wstrict-prototypes
-CCFLAGS=-Wall -W -Wformat-nonliteral -Wcast-align -Wpointer-arith \
-	-Wbad-function-cast -Wmissing-prototypes \
-	-Wmissing-declarations -Winline -Wundef -Wnested-externs -Wcast-qual \
-	-Wshadow -Wwrite-strings -Wno-unused-parameter \
+CCFLAGS=-Wall -W -Wformat-nonliteral -Wcast-align -Wpointer-arith 	    	\
+	-Wbad-function-cast -Wmissing-prototypes 				\
+	-Wmissing-declarations -Winline -Wundef -Wnested-externs -Wcast-qual 	\
+	-Wshadow -Wwrite-strings -Wno-unused-parameter 				\
 	-Wswitch -Wbad-function-cast -g
-INCLUDE=-I../include -I/usr/include/gmp -I/usr/include/mpfr -I/usr/pkg/include
+INCLUDE= -I../include -I/usr/include/gmp -I/usr/include/mpfr -I/usr/pkg/include	\
+	 -I/usr/local/include
 LIBS=-lm -lmpfr -L/usr/local/lib -L/usr/pkg/lib
 
 # Don't use 'obj' or funny things will happen with VPATH set to ../
-OBJDIR = ulpsobj
+OBJDIR = obj-ulps
 
 # For ../subr_*.c
 VPATH=../
@@ -18,7 +18,7 @@ VPATH=../
 all:	ulpcalc
 
 $(OBJDIR):
-	mkdir -p $(OBJDIR)
+	@mkdir -p $(OBJDIR)
 
 config.h:
 	autoreconf && ./configure
@@ -35,6 +35,14 @@ ulpcalc: $(DEPS)
 run:
 	./ulps
 
+.PHONY: clean
+clean:
+	rm -f $(OBJDIR)/*.o *~ core
+
+.PHONY: git-clean
+git-clean:
+	git clean -fd > /dev/null
+
 # Hacky; create tar to ../ or else it will be included in the final tar
 .PHONY: dist
 dist:
@@ -43,11 +51,3 @@ dist:
 	cp ../include/subr_random.h .
 	tar czfv ../ulp-0.1.tar.gz .
 	mv ../ulp-0.1.tar.gz .
-
-.PHONY: clean
-clean:
-	rm -f $(OBJDIR)/*.o *~ core
-
-.PHONY: git-clean
-git-clean:
-	git clean -fd > /dev/null
