ulps: Major cleanup-refactoring. Looks good.

--- a/ulps/Makefile
+++ b/ulps/Makefile
@@ -6,7 +6,7 @@ CCFLAGS=-Wall -W -Wformat-nonliteral -Wcast-align -Wpointer-arith 	    	\
 	-Wswitch -Wbad-function-cast -g
 INCLUDE= -I../include -I/usr/include/gmp -I/usr/include/mpfr -I/usr/pkg/include	\
 	 -I/usr/local/include
-LIBS=-lm -lmpfr -L/usr/local/lib -L/usr/pkg/lib
+LIBS=-lm -lmpfr -L/usr/local/lib -L/usr/opt/lib -L/usr/pkg/lib -R/usr/opt/lib
 
 # Don't use 'obj' or funny things will happen with VPATH set to ../
 OBJDIR = obj-ulps
